# videostreamingplatform

./: .env.example  .gitignore  .golangci.yml  CLAUDE.md  README.md  go.mod  go.sum  prd.md
.github/: copilot-instructions.md
.github/workflows/: build.yml  deploy-aws-k8s.yml  deploy-aws-terraform.yml  deploy-local.yml  test.yml
dataservice/: main.go
dataservice/bl/: upload_service.go  upload_service_test.go
dataservice/db/: mysql.go
dataservice/dl/: interfaces.go  memory.go  memory_test.go  mysql.go
dataservice/handlers/: upload.go
dataservice/models/: upload.go
dataservice/pb/: dataservice.pb.go  (+1 more)
docs/: ARCHITECTURE.md  AWS_DEPLOYMENT_SECRETS.md  AWS_DEPLOYMENT_WORKFLOWS.md  BINARY_BUILD_CLEANUP.md  CLEANUP_SUMMARY.md  CONSOLIDATION_SUMMARY.md  DATASERVICE_IMPLEMENTATION.md  DATASERVICE_QUICKSTART.md  DATASERVICE_README.md  DEPLOYMENT.md  DEPLOYMENT_STRATEGIES.md  DOCKER_REGISTRY_CONSOLIDATION.md  ENGINEERING_EXCELLENCE.md  ENGINEERING_EXCELLENCE_SUMMARY.md  ENGINEERING_PRACTICES.md  FINAL_COMPLETION_REPORT.md  HTTP2_STREAMING.md  IMPLEMENTATION_CHECKLIST.md  KAFKA_ES_CONSUMER.md  LOCAL_WORKFLOWS.md  LOCAL_WORKFLOWS_SETUP.md  README.md  SERVICE_INTEGRATION_GUIDE.md  SESSION_SUMMARY.md  TASK_COMPLETE.md  TERRAFORM_AWS_DEPLOYMENT.md  TERRAFORM_STRUCTURE.md  TESTS.md  UNIT_TESTS_COMPLETE.md  UTILS_INTEGRATION.md  WORKFLOW_FIXES.md  prd.md
loadtest/: run.sh
metadataservice/: main.go
rungithublocal/: .actrc  README.md  run-workflow
scripts/: es-video-template.json  init-db.sql  prometheus.yml
spark/: README.md  pyproject.toml
userservice/: main.go
(+161 files in other folders)
