[project]
name = "watch-history-ingest"
version = "0.1.0"
description = "Spark Structured Streaming job: Kafka watch-events → Iceberg watch_history table"
requires-python = ">=3.10"
dependencies = [
    "pyspark>=3.5.0,<4.0.0",
    "pyiceberg[s3]>=0.7.0,<1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-spark>=0.6"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
